add projetos mobile

--- a/estilo.css
+++ b/estilo.css
@@ -140,6 +140,100 @@ body {
         font-size: 1.5rem;
     }
 
+/* PROJETOS */
+
+    #projetos-bloco {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100vw;
+        max-width: 100%;
+        height: 100%;
+        max-height: 100%;
+        background-color: var(--cor3);
+    }
+
+    .projetos-titulo {
+        display: inline-flex;
+        background-color: var(--cor5);
+        color: var(--cor6);
+        font-size: 2rem;
+        text-decoration: underline;
+        max-width: 100%;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+        border: 3px solid var(--cor6);
+        padding: 0 1rem;
+    }
+
+    .projetos-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0 1rem 10vh 1rem;
+        gap: 4rem;
+    }
+
+    .projetos-card {
+        display: flex;
+        flex-direction: column;
+        max-width: 100%;
+        gap: 2rem;
+    }
+
+    .projetos-conteudo {
+        display: flex;
+        flex-direction: column-reverse;
+        background-color: var(--cor2);
+        color: var(--cor9);
+        border: 3px solid var(--cor6);
+        border-radius: 15px;
+        padding: 1rem;
+        align-items: center;
+        gap: 1rem;
+    }
+
+    .projetos-conteudo h2 {
+        color: var(--cor6);
+        text-align: center;
+    }
+
+    .projetos-btn {
+        display: flex;
+        width: 100%;
+        max-width: 100%;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .projetos-btn a {
+        color: var(--cor2);
+        background-color: var(--cor6);
+        padding: 0.3rem 1rem;
+        border-radius: 5px;
+        border: 2px solid var(--cor6);
+        transition: all 0.5s;
+    }
+
+    .projetos-img {
+        display: flex;
+        background-color: #546A7B;
+        width: 200px;
+        height: 200px;
+
+    }
+
+    .projetos-btn a:hover {
+        color: var(--cor6);
+        background-color: var(--cor2);
+    }
+
+    .projetos-conteudo p {
+        font-weight: 300;
+        text-align: justify;
+    }
+
 }
 
 /* FECHA MOBILEEE */
