--- a/estilo.css
+++ b/estilo.css
@@ -9,6 +9,7 @@
     --cor3: #546A7B;
     --cor4: #C7CEDB;
     --cor5: #222341;
+    --cor8: #1C3144;
     --cor6: #2DD881;
     --cor7: #546A7B;
     --cor9: #fffFFF;
@@ -162,7 +163,7 @@ body {
         max-width: 100%;
         height: 100%;
         max-height: 100%;
-        background-color: var(--cor3);
+        background-color: var(--cor8);
     }
 
     .projetos-titulo {
@@ -405,7 +406,7 @@ body {
 /* PROJETOS */
 
 #projetos-bloco {
-    background-color: var(--cor3);
+    background-color: var(--cor8);
     display: flex;
     height: 100%;
     width: 100%;
