--- a/estilo.css
+++ b/estilo.css
@@ -262,6 +262,152 @@ body {
         font-weight: 300;
     }
 
+/* CONTATOS */
+
+    #contato-bloco {
+        background-color: var(--cor2);
+        padding: 5rem 1rem;
+    }
+
+    .contato-conteiner {
+        display: flex;
+        flex-direction: column;
+        width: 100vw;
+        max-width: 100%;
+        height: 100%;
+    }
+
+    .contato-txt {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        color: var(--cor6);
+    }
+
+    .contato-txt a {
+        font-size: 1.5rem;
+        color: #2DD881;
+    }
+
+    .contato-txt ul {
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .contato-img {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .contato-img img {
+        width: 35vw;
+        height: auto;
+    }
+
+    .contato-img a {
+        color: var(--cor8);
+        font-size: 1rem;
+    }
+
+    
+.form-card {
+    background-color: var(--cor5);
+    padding: 1rem;
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    row-gap: 1rem;
+    border-radius: 15px;
+    box-shadow: 3px 3px 5px #0000004f;
+    max-height: 100%;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-height: 100%;
+    max-width: 100%;
+    row-gap: 1rem;
+}
+
+.form-card > a {
+    font-weight: 700;
+    color: var(--cor9);
+    font-size: 1.5rem;
+}
+
+.campos-form {
+    display: flex;
+    flex-direction: column;
+}
+
+.campos-form input {
+    background-color: var(--cor7);
+    border-radius: 8px;
+    padding: 1rem;
+    font-family: 'Poppins', sans-serif;
+    color: var(--cor9);
+    font-weight: 600;
+}
+
+.campos-form input::placeholder{
+    color: #7d9eb6;
+    font-weight: 700;
+    font-family: 'Poppins', sans-serif;
+}
+
+.campos-form label {
+    color: var(--cor9);
+    font-size: 1.3rem;
+    font-weight: 300;
+}
+
+.campos-form textarea {
+    background-color: var(--cor7);
+    border-radius: 8px;
+    padding: 1rem;
+    font-family: 'Poppins', sans-serif;
+    color: var(--cor9);
+    font-weight: 600;
+}
+
+.campos-form textarea::placeholder{
+    color: #7d9eb6;
+    font-weight: 700;
+    font-family: 'Poppins', sans-serif;
+}
+
+.btns-form {
+    display: flex;
+    justify-content: space-between;
+}
+
+.btns-form button {
+    padding: 0.3rem 1rem;
+    font-size: 1.3rem;
+    font-weight: 500;
+    font-family: 'Poppins', Arial, Helvetica, sans-serif;
+    cursor: pointer;
+    background-color: var(--cor6);
+    color: var(--cor5);
+    border-radius: 4px;
+    border: 2px solid var(--cor6);
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    transition: all 0.5s;
+}
+
+.btns-form button:hover {
+    background-color: var(--cor5);
+    color: var(--cor6);
+    box-shadow: 3px 3px 8px #2dd8804f;
+}
+
+
 }
 
 /* FECHA MOBILEEE */
@@ -299,11 +445,11 @@ body {
     
 
     .home-conteudo-txt h1 {
-        font-size: 3rem;
+        font-size: 5vw;
     }
 
     .home-conteudo-txt p {
-        font-size: 2rem;
+        font-size: 2vw;
         font-weight: 200;
     }
 
@@ -321,7 +467,7 @@ body {
     .home-conteudo-btn a {
         width: 100%;
         height: 100%;
-        font-size: 2.3rem;
+        font-size: 3vw;
         font-weight: 500;
         padding: 0 2rem;
         color: var(--cor2);
@@ -526,7 +672,7 @@ body {
     max-width: 100%;
     max-height: 100%;
     background-color: var(--cor2);
-    padding: 3rem 1rem;
+    padding: 1rem;
 }
 
 .contato-left {
@@ -536,15 +682,19 @@ body {
     max-width: 50%;
     align-items: center;
     justify-content: center;
-    height: 110vh;
 }
 
 .contato-txt {
-    height: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 100%;
+    justify-content: center;
 }
 
 .contato-txt h1 {
     color: var(--cor6);
+    font-size: 2rem;
 }
 
 .contato-txt p {
@@ -556,6 +706,21 @@ body {
     color: var(--cor6);
 }
 
+.contato-img {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+}
+
+.contato-img a {
+    color: var(--cor8);
+    font-size: 0.3s;
+}
+
+.contato-img img {
+    width: 30vw;
+}
+
 .contato-txt ul {
     display: flex;
     justify-content: space-around;
@@ -564,7 +729,7 @@ body {
 
 .contato-txt ul li a {
     border: 3px solid transparent;
-    transition: all 0.5s;
+    transition: all 0.8s;
 }
 
 .contato-txt ul li a:hover {
@@ -575,6 +740,7 @@ body {
     display: flex;
     width: 50vw;
     max-width: 50%;
+    max-height: 100%;
     align-items: center;
     justify-content: center;
     height: 110vh;
@@ -582,21 +748,23 @@ body {
 
 .form-card {
     background-color: var(--cor5);
-    padding: 2rem 1rem 1rem 1rem;
+    padding: 1rem;
     display: flex;
-    width: 95%;
+    width: 35vw;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     row-gap: 1rem;
     border-radius: 15px;
     box-shadow: 3px 3px 5px #0000004f;
+    max-height: 100%;
 }
 
 form {
     display: flex;
     flex-direction: column;
     width: 100%;
+    max-height: 100%;
     max-width: 100%;
     row-gap: 1rem;
 }
