--- a/style/header.css
+++ b/style/header.css
@@ -75,6 +75,7 @@ header {
     .menu-lista {
         display: flex;
         justify-content: space-around;
+        align-items: center;
         gap: 3rem;
     }
 
