--- a/style/about.css
+++ b/style/about.css
@@ -6,7 +6,7 @@
         align-items: center;
         width: 100vw;
         max-width: 100%;
-        height: 100%;
+        height: 100vh;
         max-height: 100%;
         background-color: var(--cor5);
         padding: 10vh 1rem;
@@ -61,7 +61,7 @@
     #sobre-bloco {
         background-color: var(--cor5);
         display: flex;
-        height: 100%;
+        height: 100vh;
         max-height: 100%;
         align-items: center;
         justify-content: center;
@@ -70,9 +70,10 @@
     
       .sobre-container {
         display: flex;
+        width: 80%;
         flex-direction: column;
         align-items: center;
-        padding: 1rem;
+        padding: 1.5rem 2rem 2rem 2rem;
         border: 3px solid var(--cor3);
         row-gap: 3rem;
         border-radius: 5px;
@@ -84,6 +85,7 @@
         font-size: 3.5rem;
         text-align: center;
         text-decoration: underline;
+        margin-bottom: 3rem;
       }
     
       .sobre-img {
@@ -104,7 +106,8 @@
         color: var(--cor9);
         font-size: 1.5rem;
         text-align: justify;
-        line-height: 2rem;
+        line-height: 2.5rem;
+        text-indent: 3rem;
       }
     
       .sobre-icons {
