--- a/src/app/pages/home_page/about_section/about_section.module.css
+++ b/src/app/pages/home_page/about_section/about_section.module.css
@@ -7,3 +7,9 @@
   background-color: var(--dark-second);
   row-gap: 2rem;
 }
+
+@media (max-width: 800px) {
+  .about_section {
+    padding: 90px 1rem;
+  }
+}
